@@ -20,6 +20,7 @@ Version 1.7.9+svn:
    * Fix the addon upload script to include the translate flag (patch #1387)
    * Added a new gui2 timer engine
    * Converted the hover tooltips to use the new timer engine
+   * MP lobby refresh to the new timer engine
 
 Version 1.7.9-beta2:
  * AI:
